<resources>
    <string name="rub">₱</string>
    <string name="version_caption">Версия приложения: </string>
    <string name="version_caption_symbol">V: </string>
    <string name="private_app_name">Sedi_TaxiClient</string>
    <string name="qiwi">Qiwi-магазин</string>
    <string name="qiwiwallet">Qiwi-кошелек</string>
    <string name="robokassa">ROBOKASSA</string>
    <string name="rbkmoney">RBK Money</string>
    <string name="walletone">Wallet One</string>
    <string name="uniteller">Uniteller</string>
    <string name="paypal">PayPal</string>
    <string name="ok">OK</string>
    <string name="cancel">Отмена</string>
    <string name="autorithation">Авторизация</string>
    <string name="exit">Выход</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="minimaize">Свернуть</string>
    <string name="close">Закрыть</string>
    <string name="save">Сохранить</string>
    <string name="take_order">Заказать</string>
    <string name="repeat">Повторить</string>
    <string name="search">Поиск</string>
    <string name="i_am_ready">Выхожу...</string>
    <string name="back">Назад</string>
    <string name="cash_payment">Наличный</string>
    <string name="card_payment">Безнал.</string>
    <string name="delete">Удалить</string>
    <string name="now_time">Немедленно</string>
    <string name="app_close_question_message">Действительно хотите завершить работу приложения?</string>
    <string name="close_or_minimize_question_message">Свернуть или закрыть приложение?</string>
    <string name="absent_info">Информация отсутствует</string>
    <string name="loadInfoMessage_0">Загрузка...</string>
    <string name="loadInfoMessage_1">Проверка сети...</string>
    <string name="loadInfoMessage_2">Проверка интернета...</string>
    <string name="loadInfoMessage_3">Загрузка данных...</string>
    <string name="loadInfoMessage_4">Авторизация...</string>
    <string name="noInetOrSimCard">На устройстве недоступен интернет.\nПроверьте Ваше устройство и повторите попытку.</string>
    <string name="phone">Телефон</string>
    <string name="phone_">Телефон:</string>
    <string name="input_phone_for_sms_message">Введите номер Вашего телефона.\nНа этот номер мы отправим Вам код для подтверждения.</string>
    <string name="input_email_for_send_message">Введите Ваш E-mail.\nНа этот E-mail мы отправим Вам код для подтверждения.</string>
    <string name="phone_number">Номер телефона</string>
    <string name="your_name">Ваше имя</string>
    <string name="partner_code">Партнерский код</string>
    <string name="bad_phone_lenght_message">Для регистрации нужно заполнить все поля.\nНомер должен быть в международном формате.\n+7XXXXXXXXXX</string>
    <string name="bad_phone_number">Номер должен быть указан в международном формате:\n+7XXXXXXXXX</string>
    <string name="send_key">Оправляем ключ...</string>
    <string name="max_count_key_error_message">Вы превысили допустимое колличество отправки SMS ключей, повторную отправку можно сделать после: </string>
    <string name="send_sms">Отправить SMS</string>
    <string name="key">Ключ</string>
    <string name="wait_key_for_check_message">Ожидаем ключ для подтверждения </string>
    <string name="personal_key">Персональный ключ</string>
    <string name="bad_key_lenght_message">Ключ не должен быть короче 4 символов</string>
    <string name="waiting_key">Ожидаем\nключ</string>
    <string name="resend_sms">Переотправить SMS</string>
    <string name="resend_key_message">Повторная отправка ключа...</string>
    <string name="save_user_message">Сохраняем пользователя...</string>
    <string name="resend_key_question_message">Отправить ключ еще раз?</string>
    <string name="giving_address">Адрес подачи</string>
    <string name="movement_address">Адрес следования</string>
    <string name="route">Маршрут</string>
    <string name="route_">Маршрут:</string>
    <string name="giving_time">Когда</string>
    <string name="service_or_option">Сервисы и услуги</string>
    <string name="additional_info">Доп. информация</string>
    <string name="cost_calculation">Расчет стоимости</string>
    <string name="driver_near_me">Ближайшие водители</string>
    <string name="call_to_dispatcher_message">Позвонить в диспетчерскую по номеру:\n</string>
    <string name="missing_services_message">Данная компания не предоставляет дополнительных сервисов.</string>
    <string name="service_unavailable_message">Невозможно сделать действие!\nОшибка: %s</string>
    <string name="my_orders">Мои заказы</string>
    <string name="get_taxi">Заказать такси</string>
    <string name="need_first_address_error_message">Сначала укажите адрес подачи</string>
    <string name="empty_dispatche_phone_message">Группа не указала телефоны диспечерской.</string>
    <string name="dial_unvailable_message">Ваше устройство не может совершать звонки.</string>
    <string name="promocode">Промокод</string>
    <string name="input_address">Ввести адрес</string>
    <string name="street_or_object">Улица, объект</string>
    <string name="house_number">Номер дома</string>
    <string name="entrance">Подъезд</string>
    <string name="entrance_short">под.</string>
    <string name="invalid_address_message">Для адреса подачи нужно указать дом или объект</string>
    <string name="add_city">Добавить населенный пункт</string>
    <string name="check_address">Проверить адрес</string>
    <string name="bad_location_message">Не удалось определить местоположение из-за отсутствия гео-данных</string>
    <string name="select_address">Выберите адрес</string>
    <string name="incorrect_order_time_message">Время предварительного заказа должно быть больше текущего времени на 20 или более минут</string>
    <string name="input_city">Введите населенный пункт</string>
    <string name="bad_geoservice_responce_format">На Ваш запрос \"%s\", гео-сервис не нашел адрес, повторите ввод.</string>
    <string name="select_city">Выберите нас. пункт</string>
    <string name="select_tariff_">Выбрать тариф:</string>
    <string name="registration_order">Регистрирую заказ...</string>
    <string name="registration_order_success_message">Спасибо, Ваш заказ успешно зарегистрирован!</string>
    <string name="pay_necessary_sum_message">На счету недостаточно средств для безналичного заказа. Пополнить баланс на недостающую сумму?</string>
    <string name="input_additional_info">Введите дополнительную информацию</string>
    <string name="bad_text_lenght_message">Длина текста должна быть более 3 символов</string>
    <string name="orders_history">История заказов</string>
    <string name="order_">Заказ:</string>
    <string name="time_">Время:</string>
    <string name="driver_">Водитель:</string>
    <string name="car_">Авто:</string>
    <string name="cost_">Стоимость:</string>
    <string name="order_status_">Статус заказа:</string>
    <string name="load_history">Загрузка истории</string>
    <string name="no_have_order_messsage">По Вашему запросу не найдено ни одной записи.\nИзмените параметры и повторите поиск</string>
    <string name="set_rating">Оценить поездку</string>
    <string name="rating_">Рейтинг:</string>
    <string name="comment_">Комментарий:</string>
    <string name="input_comment">Введите комментарий</string>
    <string name="about_application">О приложении</string>
    <string name="app_description_format">С приложением \'%s\' Вы сможете заказать такси всего в несколько касаний. Тысячи абсолютно легальных таксистов с различными классами авто и ценовой категорией теперь находятся в Вашем кармане.</string>
    <string name="what_new_format">Что нового в %s?</string>
    <string name="search_period_">Период поиска:</string>
    <string name="search_type_">Тип поиска:</string>
    <string name="search_params">Параметры поиска</string>
    <string name="map">Карта</string>
    <string name="render_account">Выставление счета</string>
    <string name="sum_">Сумма:</string>
    <string name="pay">Оплатить</string>
    <string name="input_sum">Введите сумму</string>
    <string name="bad_payment_sum_message">Сумма указана неверно. Сумма должна быть более 1 рубля.</string>
    <string name="set_need_sum_message">В поле \"Сумма\" указано недостающее колличество средств для заказа.</string>
    <string name="user_balance">Баланс пользователя</string>
    <string name="recharge_balance">Пополнить баланс</string>
    <string name="settings">Настройки</string>
    <string name="call_to_driver_question_message">Вы действительно хотите совершить звонок водителю?</string>
    <string name="input_promo">Введите промокод</string>
    <string name="your_location">Ваше местоположение</string>
    <string name="use_as_first_point_question_message">Использовать его как начальную точку?</string>
    <string name="address_sequence_message">Невозможно указать 2 одинаковых адреса последовательно.</string>
    <string name="address_history">История адресов</string>
    <string name="my_address">Мои адреса</string>
    <string name="DontFindMyLocation">Не определять мое местоположение</string>
    <string name="msg_RemoveAddressFromHistoryQuestion">Удалить адрес из истории?</string>
    <string name="msg_RemoveAddressFromRouteQuestion">Удалить адрес из маршрута?</string>
    <string name="RouteDistanceIs">Длина маршрута: ~%d км.</string>
    <string name="RouteTimeIs" formatted="false">Время в пути: ~%d %s</string>
    <string name="msg_RemoveRouteQuestion">Удалить весь маршрут?</string>
    <string name="msg_YouAddressIs_RemoveQuestion">Выбрано: %s. Удалить эту точку из маршрута?</string>
    <string name="msg_AddPointAs_Question">Выбрано: %s. Добавить точку в маршрут?</string>
    <string name="msg_IamHere">Я здесь!</string>
    <string name="AsGiving">Адрес подачи</string>
    <string name="AsRoute">Точка маршрута</string>
    <string name="DisconnectSound">Отключить звук</string>
    <string name="OnlyVibrationNotfy">Оповещать о событиях только вибрацией</string>
    <string name="DefaultAddress">Адрес по умолчанию</string>
    <string name="msg_DefaultAddressDesc">При запуске приложения ставит Ваше текущее местоположение как адрес подачи
    </string>
    <string name="AppLanguage">Язык приложения</string>
    <string name="Load">Загрузка</string>
    <string name="CalcCostRouteTime" formatted="false">Путь: ≈%.1f км. Время в пути: ≈%d мин.</string>
    <string name="DirectionsFor">по указанию</string>
    <string name="msg_CalcCost_1" formatted="false">
        <![CDATA[<font color=\'%s\'>%s</font>, подать машину по адресу <font color=\'%s\'>%s</font>, поедем <font color=\'%s\'>%s</font>%s;<br/>Стоимость поездки <font color=\'%s\'>%s</font>]]></string>
    <string name="msg_CalcCost_2" formatted="false"><![CDATA[<br/>Ваша скидка: <font color=\'%s\'>%.2f%s</font>]]></string>
    <string name="Balance">Баланс</string>
    <string name="msg_SelectYourLanguage">Язык интерфейса приложения</string>
    <string name="ActiveOrder">Активные заказы</string>
    <string name="WriteUs">Написать нам</string>
    <string name="InputYourMessage">Введите Ваше сообщение</string>
    <string name="Email">E-mail</string>
    <string name="ConfirmPhone_">Контактный номер:</string>
    <string name="secondname">Фамилия</string>
    <string name="name">Имя</string>
    <string name="patronymic">Отчество</string>
    <string name="birthday">Дата рождения</string>
    <string name="profile">Профиль</string>
    <string name="gender">Пол</string>
    <string name="save_as_my_route">Сохранить как маршрут</string>
    <string name="input_title">Введите название</string>
    <string name="shared_app">Рассказать друзьям</string>
    <string name="driver_application">Приложение водителя</string>
    <string name="customer_application">Приложение заказчика</string>
    <string name="select_app_to_invited_">В какое приложение пригласить:</string>
    <string name="send">Отправить</string>
    <string name="link_card">Привязать карту</string>
    <string name="service">Сервис</string>
</resources>