<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:key="VIBRATION_NOTIFY"
        android:title="@string/DisconnectSound"
        android:summary="@string/OnlyVibrationNotfy"/>

    <CheckBoxPreference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:key="ENABLED_SET_DEFAULT_ADDRESS"
        android:summary="@string/msg_DefaultAddressDesc"
        android:title="@string/DefaultAddress"/>
    <ListPreference
        android:title="@string/AppLanguage"
        android:summary="@string/msg_SelectYourLanguage"
        android:key="LOCALE_CODE"
        android:entries="@array/LocaleName"
        android:entryValues="@array/LocaleCode"/>

</PreferenceScreen>