<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="ru.sedi.customerclient.activitys.user_profile.ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/secondname"
            android:textColor="@color/primaryColor"
            android:textSize="@dimen/FontSize_15"/>

        <EditText
            android:id="@+id/etSecondname"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/secondname"
            android:inputType="textPersonName"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/primaryColor"
            android:textSize="@dimen/FontSize_15"/>

        <EditText
            android:id="@+id/etName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="textPersonName"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/patronymic"
            android:textColor="@color/primaryColor"
            android:textSize="@dimen/FontSize_15"/>

        <EditText
            android:id="@+id/etPatronymic"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/patronymic"
            android:inputType="textPersonName"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:textColor="@color/primaryColor"
                android:textSize="@dimen/FontSize_15"/>

            <EditText
                android:id="@+id/etGender"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/gender"
                android:inputType="textPersonName"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/birthday"
            android:textColor="@color/primaryColor"
            android:textSize="@dimen/FontSize_15"/>

        <EditText
            android:id="@+id/etBirthday"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="00.00.0000"
            android:inputType="datetime"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textColor="@color/primaryColor"
            android:textSize="@dimen/FontSize_15"/>

        <EditText
            android:id="@+id/etPhone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            android:inputType="phone"/>

        <Button
            android:id="@+id/btnSave"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_orange"
            android:text="@string/save"
            android:textColor="@color/whiteColor"/>

    </LinearLayout>
</ScrollView>